tests/executable/errors/2-dim_static_float_with_env_2.c
void main()
{
	float arr[2][3] =
	{
		{ 1, 2, 3 },
		{ 1, 2 }
	};

	assert(arr[0][0] == 1, "arr[0] = { 1, 2, 3 }, arr[0][0] != 1");
}
